testing/hdf5: upgrade to 1.10.6

--- a/testing/hdf5/APKBUILD
+++ b/testing/hdf5/APKBUILD
@@ -10,8 +10,8 @@
 # builds, due to inadequate locking.
 
 pkgname=hdf5
-pkgver=1.10.5
-pkgrel=2
+pkgver=1.10.6
+pkgrel=0
 pkgdesc="HDF5 is a data model, library, and file format for storing and managing data"
 url="https://www.hdfgroup.org/solutions/hdf5/"
 arch="all"
@@ -20,7 +20,7 @@ options="!check" # test suite takes a very long time
 depends_dev="zlib-dev"
 makedepends="cmake $depends_dev perl"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
-source="http://www.hdfgroup.org/ftp/HDF5/current18/src/$pkgname-$pkgver.tar.bz2"
+source="http://www.hdfgroup.org/ftp/HDF5/current18/src/hdf5-$pkgver.tar.bz2"
 source="https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-${pkgver%.*}/hdf5-$pkgver/src/hdf5-$pkgver.tar.bz2"
 
 prepare() {
@@ -64,12 +64,12 @@ build() {
 }
 
 check() {
-	export LD_LIBRARY_PATH="${srcdir}"/${pkgname}-${pkgver/_/-}/src/.libs/
-	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"${srcdir}"/${pkgname}-${pkgver/_/-}/c++/src/.libs/
-	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"${srcdir}"/${pkgname}-${pkgver/_/-}/fortran/src/.libs/
-	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"${srcdir}"/${pkgname}-${pkgver/_/-}/hl/src/.libs/
-	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"${srcdir}"/${pkgname}-${pkgver/_/-}/hl/c++/src/.libs/
-	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"${srcdir}"/${pkgname}-${pkgver/_/-}/hl/fortran/src/.libs/
+	export LD_LIBRARY_PATH="$srcdir"/$pkgname-${pkgver/_/-}/src/.libs/
+	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"$srcdir"/$pkgname-${pkgver/_/-}/c++/src/.libs/
+	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"$srcdir"/$pkgname-${pkgver/_/-}/fortran/src/.libs/
+	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"$srcdir"/$pkgname-${pkgver/_/-}/hl/src/.libs/
+	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"$srcdir"/$pkgname-${pkgver/_/-}/hl/c++/src/.libs/
+	export LD_LIBRARY_PATH="$LD_LIBRARY_PATH":"$srcdir"/$pkgname-${pkgver/_/-}/hl/fortran/src/.libs/
 	make check
 }
 
@@ -79,4 +79,4 @@ package() {
 
 }
 
-sha512sums="769e43b8672e26fe24ed68da0228c010d3d9bc950ca09f0bc60707911a2f26f2f8415c8abc8ec06e07667148d8cdb3b0c7b3e7860d9b19739629c5dfd5ce73d4  hdf5-1.10.5.tar.bz2"
+sha512sums="821392718605e3f7a287d4729d022a55fd7b91ddaa2e9a3f35ab8fce3d3d4871a0cc88215be3052887cbac3615cc8953569c7f131217962103c98151c0ab58d4  hdf5-1.10.6.tar.bz2"
