main/cppunit: upgrade to 1.15.0

--- a/main/cppunit/APKBUILD
+++ b/main/cppunit/APKBUILD
@@ -1,19 +1,15 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=cppunit
-pkgver=1.14.0
-pkgrel=1
+pkgver=1.15.0
+pkgrel=0
 pkgdesc="C++ unit testing framework"
 url="http://www.freedesktop.org/wiki/Software/cppunit/"
 arch="all"
 license="LGPL-2.0-or-later"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://dev-www.libreoffice.org/src/$pkgname-$pkgver.tar.gz
-	fix-Werror-deprecated-copy.patch"
-
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://dev-www.libreoffice.org/src/cppunit-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	LIBS="-ldl" ./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -26,14 +22,11 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4ea1da423c6f7ab37e4144689f593396829ce74d43872d6b10709c1ad5fbda4ee945842f7e9803592520ef81ac713e95a3fe130295bf048cd32a605d1959882e  cppunit-1.14.0.tar.gz
-000404d7b3318743f416d4d10ecd245935a5e1f4f0a43910eeeda152a0151855adffa8a70632abe0a76e24b408233e5d1f287eff2f174e60c65b2e5cfae66c34  fix-Werror-deprecated-copy.patch"
+sha512sums="2ee90c5317f9480020095896b38e470ab8a63ab9b695db479f1b37512570fed37a271c3259004c9ce92b4fb051d37e1aa3bae55ec30c80d97041c59d2a257810  cppunit-1.15.0.tar.gz"
