--- a/main/lttng-ust/APKBUILD
+++ b/main/lttng-ust/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Michael Jeanson <mjeanson@efficios.com>
 # Maintainer: Michael Jeanson <mjeanson@efficios.com>
 pkgname=lttng-ust
-pkgver=2.10.4
+pkgver=2.11.0
 pkgrel=0
 pkgdesc="LTTng 2.0 Userspace Tracer"
 url="https://lttng.org"
@@ -12,23 +12,21 @@ subpackages="$pkgname-doc $pkgname-dev"
 source="https://lttng.org/files/lttng-ust/lttng-ust-$pkgver.tar.bz2"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
 		--prefix=/usr \
-		--disable-static
+		--disable-static \
+		--disable-numa
 	make V=1
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="e10ab464abe1a305a2e51c37aa7111db3861a09ab8e451ba98f612d53f125c1e7a9225c6663b99bbab24913795f2d351c7dbafc0a52d1468d52899b8b966fc1b  lttng-ust-2.10.4.tar.bz2"
+sha512sums="fb7258961a7e913487806a7e0129c95becff8c631382b119ff1d78f95cdd7460ec24e62671642160fdb006a3a292b2b10f35c8424f0367ce7c6a41cbcca77a09  lttng-ust-2.11.0.tar.bz2"
