testing/lttng-tools: upgrade to 2.11.0

--- a/testing/lttng-tools/APKBUILD
+++ b/testing/lttng-tools/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Michael Jeanson <mjeanson@efficios.com>
 # Maintainer: Michael Jeanson <mjeanson@efficios.com>
 pkgname=lttng-tools
-pkgver=2.10.7
+pkgver=2.11.0
 pkgrel=0
 pkgdesc="LTTng 2.0 control and utility programs"
 url="https://lttng.org"
@@ -12,7 +12,7 @@ depends_dev="popt-dev libxml2-dev userspace-rcu-dev lttng-ust-dev kmod-dev
 	util-linux-dev"
 makedepends="$depends_dev bash grep coreutils automake autoconf libtool"
 checkdepends="util-linux"
-subpackages="$pkgname-dev $pkgname-doc"
+subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://lttng.org/files/lttng-tools/lttng-tools-$pkgver.tar.bz2"
 
 build() {
@@ -40,4 +40,4 @@ package() {
 		"$pkgdir"/usr/share/licenses/$pkgname/
 }
 
-sha512sums="1151f8f251d05959e7ec597dfcece2a968887c4551cfb238d30447b0d93b25d23a1cfbc4f3a6651a8c2c7dd95119a0d8886bbe43ff50b28c6c9ca9f4f109d3b7  lttng-tools-2.10.7.tar.bz2"
+sha512sums="2b183296201cc62faa1f5afef3fdb67f089996479987d9e6e52e6286301f57a1015f017cc8b743496c30500579fcabde2945db3b7879ae5bd0a6723cfbdf99fb  lttng-tools-2.11.0.tar.bz2"
