community/mingw-w64-binutils: upgrade to 2.33.1

--- a/community/mingw-w64-binutils/APKBUILD
+++ b/community/mingw-w64-binutils/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=mingw-w64-binutils
-pkgver=2.32
+pkgver=2.33.1
 pkgrel=0
 pkgdesc="Cross binutils for the MinGW-w64 cross-compiler"
 url="http://www.gnu.org/software/binutils"
@@ -9,7 +9,7 @@ arch="x86_64 x86"
 license="GPL-3.0-or-later"
 makedepends="zlib-dev"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://ftp.gnu.org/gnu/binutils/binutils-${pkgver}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.gz"
 builddir="$srcdir/binutils-$pkgver"
 
 case "$CARCH" in
@@ -18,7 +18,7 @@ case "$CARCH" in
 esac
 
 # Directory for out-of-tree builds
-_binutilsdir="$srcdir/binutils-${_target}"
+_binutilsdir="$srcdir/binutils-$_target"
 
 prepare() {
 	default_prepare
@@ -49,4 +49,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="0dbf26e648096f267715d645fed563690a83c55b67cc6da9b7991114aa816465207887688979b6bcdd247491fe45cf9b4827215229a1229563ba1eb2e5053783  mingw-w64-binutils-2.32.tar.gz"
+sha512sums="67f97a480f1e25313bbe826d4bcfaf0cd66a39e3bc724ba137bf81c146c119827b5d07b98789f5cba0bbe296a7c065b68f377e82f5eb2063350594c34079cbc8  mingw-w64-binutils-2.33.1.tar.gz"
