--- a/community/mingw-w64-winpthreads/APKBUILD
+++ b/community/mingw-w64-winpthreads/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=mingw-w64-winpthreads
-pkgver=6.0.0
+pkgver=7.0.0
 pkgrel=0
 pkgdesc="MinGW-w64 winpthreads library"
 url="http://mingw-w64.sourceforge.net"
@@ -13,7 +13,7 @@ makedepends="
 	mingw-w64-crt
 	"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.bz2::https://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${pkgver}.tar.bz2"
+source="$pkgname-$pkgver.tar.bz2::https://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v$pkgver.tar.bz2"
 builddir="$srcdir/mingw-w64-v$pkgver/mingw-w64-libraries/winpthreads"
 
 case "$CARCH" in
@@ -27,25 +27,25 @@ build() {
 		--host=${_target} \
 		--enable-static \
 		--enable-shared \
-		CC=${_target}-gcc
+		CC=$_target-gcc
 	make
 }
 
 package() {
 	make DESTDIR="$pkgdir" install
-	${_target}-strip --strip-unneeded "$pkgdir"/usr/${_target}/bin/*.dll
+	$_target-strip --strip-unneeded "$pkgdir"/usr/$_target/bin/*.dll
 
 	# Licenses
-	install -Dm644 "$srcdir"/mingw-w64-v${pkgver}/COPYING.MinGW-w64/COPYING.MinGW-w64.txt \
-		"$pkgdir"/usr/share/licenses/${pkgname}/COPYING.MinGW-w64.txt
-	install -Dm644 "$srcdir"/mingw-w64-v${pkgver}/COPYING.MinGW-w64-runtime/COPYING.MinGW-w64-runtime.txt \
-		"$pkgdir"/usr/share/licenses/${pkgname}/COPYING.MinGW-w64-runtime.txt
-	install -Dm644 "$srcdir"/mingw-w64-v${pkgver}/mingw-w64-headers/ddk/readme.txt \
-		"$pkgdir"/usr/share/licenses/${pkgname}/ddk-readme.txt
-	install -Dm644 "$srcdir"/mingw-w64-v${pkgver}/mingw-w64-headers/direct-x/COPYING.LIB \
-		"$pkgdir"/usr/share/licenses/${pkgname}/direct-x-COPYING.LIB
-	install -Dm644 "$srcdir"/mingw-w64-v${pkgver}/mingw-w64-headers/direct-x/readme.txt \
-		"$pkgdir"/usr/share/licenses/${pkgname}/direct-x-readme.txt
+	install -Dm644 "$srcdir"/mingw-w64-v$pkgver/COPYING.MinGW-w64/COPYING.MinGW-w64.txt \
+		"$pkgdir"/usr/share/licenses/$pkgname/COPYING.MinGW-w64.txt
+	install -Dm644 "$srcdir"/mingw-w64-v$pkgver/COPYING.MinGW-w64-runtime/COPYING.MinGW-w64-runtime.txt \
+		"$pkgdir"/usr/share/licenses/$pkgname/COPYING.MinGW-w64-runtime.txt
+	install -Dm644 "$srcdir"/mingw-w64-v$pkgver/mingw-w64-headers/ddk/readme.txt \
+		"$pkgdir"/usr/share/licenses/$pkgname/ddk-readme.txt
+	install -Dm644 "$srcdir"/mingw-w64-v$pkgver/mingw-w64-headers/direct-x/COPYING.LIB \
+		"$pkgdir"/usr/share/licenses/$pkgname/direct-x-COPYING.LIB
+	install -Dm644 "$srcdir"/mingw-w64-v$pkgver/mingw-w64-headers/direct-x/readme.txt \
+		"$pkgdir"/usr/share/licenses/$pkgname/direct-x-readme.txt
 }
 
-sha512sums="e3d3663e0cb33a16f90b1a33e81b5a30d26f7e34270b14e865c10068f2a2d32da9ef8cbbb0c3fed9c71429ae11c82152ff3b87d81558929b2a4993dc99cfc11e  mingw-w64-winpthreads-6.0.0.tar.bz2"
+sha512sums="30e5b2824a24eeb99ab519e3fc134cc9a7f04ee8b853bc8d66a13d1ab74144bf78b93e162bfe6de2a5e61f63c0e620a933b260b02d019cd68cc4b78bd36c67fd  mingw-w64-winpthreads-7.0.0.tar.bz2"
