testing/kakoune: add APKBUILD to known filetypes

--- a/testing/kakoune/APKBUILD
+++ b/testing/kakoune/APKBUILD
@@ -1,14 +1,16 @@
 # Maintainer: Jakub Skrzypnik <j.skrzypnik@openmailbox.org>
 pkgname=kakoune
 pkgver=2019.12.10
-pkgrel=0
+pkgrel=1
 pkgdesc="Code editor heavily inspired by Vim, but with less keystrokes"
 url="http://kakoune.org"
 arch="all"
 license="Unlicense"
 makedepends="ncurses-dev asciidoc"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/mawww/kakoune/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/mawww/kakoune/archive/v$pkgver.tar.gz
+	alpine-linux.kak
+	"
 
 builddir="$srcdir/$pkgname-$pkgver/src"
 build() {
@@ -21,6 +23,8 @@ check() {
 
 package() {
 	make PREFIX="/usr" DESTDIR="$pkgdir/" debug=no install
+	install -Dm644 $srcdir/alpine-linux.kak $pkgdir/usr/share/kak/autoload/filetype/
 }
 
-sha512sums="9ed866a27f1dbbab701dcb7412450c4dd8c20cafebaedda351a0b67b9489b1ad8de82fa527b357a55aab86b0dc3e2b435f7d6177fd056331f5576ddb7befbd15  kakoune-2019.12.10.tar.gz"
+sha512sums="9ed866a27f1dbbab701dcb7412450c4dd8c20cafebaedda351a0b67b9489b1ad8de82fa527b357a55aab86b0dc3e2b435f7d6177fd056331f5576ddb7befbd15  kakoune-2019.12.10.tar.gz
+c5b11dc28adf785b4e83637fe1d5c9db334616d2d3f6c667823745e273f739c57d0d408b9bec8a65210e3c7ccb80a5b488ebbb3c0c5de8bdec13e1b4b4d02b77  alpine-linux.kak"
