testing/lowjs: disable on s390x and ppc64le
    g++ -Os -fomit-frame-pointer -DLOW_VERSION="\"20191224_3bb6c96eb9\"" -DLOW_LIB_PATH="\"../lib/low/\"" -Isrc -Iapp -Ideps/duktape/src-low -Ideps/open62541/build/src_generated -Ideps/open62541/include -Ideps/open62541/arch -Ideps/open62541/plugins/include -Ideps/open62541/src/client -Ideps/open62541/deps -Ideps/open62541/src --std=c++11 -MMD -o src/low_process.o -c src/low_process.cpp
    src/low_process.cpp:345:2: error: #error "unknown architecture"
      345 | #error "unknown architecture"
          |  ^~~~~
    make: *** [Makefile:72: src/low_process.o] Error 1

--- a/testing/lowjs/APKBUILD
+++ b/testing/lowjs/APKBUILD
@@ -9,7 +9,7 @@ _gitrev_duktape="44ca54f726bfa651a7ab59286dd5c371dba2ddfc"
 pkgrel=0
 pkgdesc="A port of Node.JS with far lower system requirements"
 url="https://www.neonious.com/lowjs/"
-arch="all"
+arch="all !s390x !ppc64le"  # excluded archs are not supported
 license="custom"
 makedepends="c-ares-dev cmake jq mbedtls-dev npm python2 py2-pip"
 subpackages="$pkgname-doc"
