community/darktable: upgrade to 3.0

--- a/community/darktable/APKBUILD
+++ b/community/darktable/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Kevin Daudt <kdaudt@alpinelinux.org>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=darktable
-pkgver=2.6.3
+pkgver=3.0.0
 pkgrel=0
 pkgdesc="an open source photography workflow application and raw developer"
 url="https://www.darktable.org/"
@@ -37,7 +37,10 @@ makedepends="
 ldpath="/usr/lib/$pkgname"
 subpackages="$pkgname-dbg $pkgname-doc $pkgname-lang"
 options="!check" # Dependencies missing
-source="https://github.com/darktable-org/darktable/releases/download/release-${pkgver/_/}/darktable-${pkgver/_/.}.tar.xz"
+source="https://github.com/darktable-org/darktable/releases/download/release-${pkgver/_/}/darktable-${pkgver/_/.}.tar.xz
+	fix-ifunc-multiarch.patch
+	null-char-pointer-sentinel.patch
+	"
 builddir="$srcdir/$pkgname-${pkgver/_/~}"
 
 prepare() {
@@ -63,4 +66,6 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4672f4f4d5fa57fb0d53d3886cd2773a6036334b85a0df29995f1a67c59d6b57534e06c8bf1666c8e294dd92db1197113bb3d625512671625c14e0abf5e2f14c  darktable-2.6.3.tar.xz"
+sha512sums="de154cc19281f61316363243db3e531be33ac4c4632d6277ba715884b83a3c35f1d433a0e53f5f1eb7ffe03c6fcba4629612c94f942c196807c876b421faafc6  darktable-3.0.0.tar.xz
+bbb665f06b21a75f34a82f26d9e7421281445843b392871d1f851c7b73eabc862bbe43525b669a67429a22fea63bb03ca90b8a1d200d62a52907946ffcd9a7e3  fix-ifunc-multiarch.patch
+5ca542c875c769c4475b0b75244365f2e5829e451e05b9294627e154de9559c995aa252f128f6ffab36c60d17a618ff562abddb88c981672960e7c35e612ebdb  null-char-pointer-sentinel.patch"
