community/darktable: modernize

--- a/community/darktable/APKBUILD
+++ b/community/darktable/APKBUILD
@@ -6,7 +6,7 @@ pkgrel=0
 pkgdesc="an open source photography workflow application and raw developer"
 url="https://www.darktable.org/"
 arch="x86 x86_64 aarch64"
-license="GPL-3.0"
+license="GPL-3.0-or-later"
 makedepends="
 	cmake
 	colord-dev
@@ -41,12 +41,9 @@ source="https://github.com/darktable-org/darktable/releases/download/release-${p
 	fix-ifunc-multiarch.patch
 	null-char-pointer-sentinel.patch
 	"
-builddir="$srcdir/$pkgname-${pkgver/_/~}"
 
 prepare() {
-	default_prepare || return 1
-
-	cd "$builddir"
+	default_prepare
 	mkdir -p build
 }
 
@@ -57,7 +54,7 @@ build() {
 		-DBUILD_SHARED_LIBS=True \
 		-DCMAKE_BUILD_TYPE=Release \
 		-DBINARY_PACKAGE_BUILD=ON \
-		.. || return 1
+		..
 	make
 }
 
