--- a/community/darktable/APKBUILD
+++ b/community/darktable/APKBUILD
@@ -5,7 +5,7 @@ pkgver=3.0.0
 pkgrel=0
 pkgdesc="an open source photography workflow application and raw developer"
 url="https://www.darktable.org/"
-arch="x86 x86_64 aarch64"
+arch="x86_64 aarch64"
 license="GPL-3.0-or-later"
 makedepends="
 	cmake
