--- a/testing/atari800/APKBUILD
+++ b/testing/atari800/APKBUILD
@@ -1,32 +1,32 @@
 # Contributor: Paul Bredbury <brebs@sent.com>
 pkgname=atari800
-pkgver=4.0.0
+pkgver=4.1.0
 pkgrel=0
 pkgdesc="Atari 8-bit computer emulator"
 url="https://atari800.github.io/"
 arch="x86_64"
 license="GPL-2.0-or-later"
-depends=""
 makedepends="autoconf automake sdl-dev mesa-dev unzip"
 options="!check" # No test suite
 subpackages="$pkgname-doc"
-source="https://github.com/$pkgname/$pkgname/archive/ATARI800_${pkgver//./_}.tar.gz"
-builddir="$srcdir/atari800-ATARI800_${pkgver//./_}/src"
+source="https://github.com/atari800/atari800/archive/ATARI800_${pkgver//./_}.tar.gz
+	onscreenkeyboard.patch::https://github.com/atari800/atari800/commit/5c6410cca5accc9540e461d312e9becf64a67baa.patch
+	"
+builddir="$srcdir/atari800-ATARI800_${pkgver//./_}"
 
 prepare() {
 	default_prepare
-	./autogen.sh
+	autoreconf -fi
 }
 
 build() {
-	cd "$builddir"
 	./configure --prefix=/usr
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="58725c099d421ceeadb1d37a370c61d6846827af6d87d131db3326016be48b4b1193acbc0cfdd54dc396bb97c760b6338006ca30b28a9f74eb881274056bd589  ATARI800_4_0_0.tar.gz"
+sha512sums="a93ff5380d1e5fcdaf1e88eb63e89f4b2228314836dc71d1591ec2699cad9f775d2ea47b46b4be2620a0b65ed7b1b4c019715d647ddda94155c96770defed23c  ATARI800_4_1_0.tar.gz
+84c666a4d594b4d195a170db511f029bc0c0ef8bddf8c74847599b7b2ce168bc9bdd7960b9c7b6301a64cb00793ff3f5f79293d159cb54869f977a4cdff345f4  onscreenkeyboard.patch"
