--- a/main/augeas/APKBUILD
+++ b/main/augeas/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=augeas
-pkgver=1.11.0
-pkgrel=1
+pkgver=1.12.0
+pkgrel=0
 pkgdesc="A configuration editing tool"
 url="http://augeas.net"
 arch="all"
@@ -11,8 +11,8 @@ subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-tests::noarch $p
 source="http://download.augeas.net/augeas-$pkgver.tar.gz
 	fix-test.patch
 	acf.aug
-	awall.aug"
-builddir="$srcdir/$pkgname-$pkgver"
+	awall.aug
+	"
 options="!checkroot"
 
 prepare() {
@@ -21,8 +21,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -38,13 +36,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install
 	rm -rf "$pkgdir"/usr/lib/charset.alias
 	# Upstream packaging mistake, this should never have been installed
@@ -81,7 +76,7 @@ static() {
 	mv "$pkgdir"/usr/lib/*.a "$subpkgdir"/usr/lib/
 }
 
-sha512sums="1b67bb7fcd9b560d3fe4a5c753d5e778db73caaab6e50367afd123eec107b65b73096913ac7d5170e85f5b63ff3522b2a6932b130e207ab22560dfc6e267b8a1  augeas-1.11.0.tar.gz
+sha512sums="4f61d4abbf338e915dfae212560d39792674bc757f05f500afa80c6170abc214ffb99cab2cf5bbd1c2338d11a6909e5fc3ff7112a2246fca69f7b39ac283da40  augeas-1.12.0.tar.gz
 9768878b2f8710436ef1eba7868c22b5eff1d2d549434bf76aced72ebdb4af4f769ea638dedf42ac9b617aaa53d1a767ed6b18868dd0bb3cf72cb3889f6d933a  fix-test.patch
 74d728abdf4d3eebdeb3823c1d2588c214fd52734c8855fe3ddbfb6465d31c88d093df356e42effdd3dbdff1a62c52894c7aa840bd6ea8df4995c4f3aa53e919  acf.aug
 fe83e70ddeced87fea4c4dbdfb90b7497bc5fd01b6b097f0f49c52894b4dc1d93cf217ae7aa98abeaba0a9f8e8e18a1d426b6c203b318afde9cd5164cbe604b1  awall.aug"
