--- a/main/unifont/APKBUILD
+++ b/main/unifont/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Breno Leitao <breno.leitao@gmail.com>
 # Maintainer: Breno Leitao <breno.leitao@gmail.com>
 pkgname=unifont
-pkgver=12.1.03
+pkgver=12.1.04
 pkgrel=0
 pkgdesc="GNU Unifont glyphs"
 url="http://unifoundry.com/unifont.html"
@@ -10,8 +10,7 @@ options="!check"  # No way to test fonts.
 license="GFDL-1.3-or-later GPL-2.0-or-later WITH Font-exception-2.0"
 depends="bdftopcf perl-gd"
 subpackages="$pkgname-dev $pkgname-doc"
-source="http://unifoundry.com/pub/unifont/$pkgname-$pkgver/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="http://unifoundry.com/pub/unifont/unifont-$pkgver/unifont-$pkgver.tar.gz"
 
 build() {
 	make DESTDIR="$pkgdir"
@@ -21,4 +20,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="4826095b3d5ab164a16a27d27334ab2ba62f39db46f164ceb31dccae14c8c0f2a1ea4d2141167c9328b699ab987bb094900d7d7af98a3c0b8d2260430d62200a  unifont-12.1.03.tar.gz"
+sha512sums="c9e0269981e871ae60ca5c98c8cd17b861c41fa1a4ae2c81bc2d776c276b3c5b3746c608371c65420c0d009ec3dd6354e517904231ad821f64d3a3620d636078  unifont-12.1.04.tar.gz"
