--- a/community/tor/APKBUILD
+++ b/community/tor/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Christine Dodrill <me@christine.website>
 # Maintainer: Christine Dodrill <me@christine.website>
 pkgname=tor
-pkgver=0.4.1.7
+pkgver=0.4.2.5
 pkgrel=0
 pkgdesc="Anonymous network connectivity"
 url="https://www.torproject.org/"
@@ -12,11 +12,10 @@ makedepends="linux-headers bash libevent-dev openssl-dev ca-certificates
 	zlib-dev"
 install="$pkgname.post-upgrade $pkgname.pre-install"
 subpackages="$pkgname-doc $pkgname-openrc"
-source="https://www.torproject.org/dist/$pkgname-$pkgver.tar.gz
+source="https://www.torproject.org/dist/tor-$pkgver.tar.gz
 	tor.initd
 	tor.confd
 	torrc.sample.patch"
-builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
 #   0.4.0.5-r0:
@@ -30,8 +29,6 @@ builddir="$srcdir/$pkgname-$pkgver"
 #   - CVE-2018-0491
 
 build() {
-	cd "$builddir"
-
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -39,20 +36,15 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--infodir=/usr/share/info \
-		--localstatedir=/var \
-		--enable-transparent
+		--localstatedir=/var
 	make
 }
 
 check() {
-	cd "$builddir"
-
 	make test
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install
 
 	install -dm755 -o $pkgusers \
@@ -65,7 +57,7 @@ package() {
 		"$pkgdir"/etc/conf.d/$pkgname
 }
 
-sha512sums="f6ead1412d23516a16f31e1157b4538071752ae09a421d9dceaa7cf76599c01490f9bfcb8e26f1a75e888359adf6adcd029ca64cf48e3b45b07e2d62482c9541  tor-0.4.1.7.tar.gz
+sha512sums="e63157713caa3590324f652f17c5c5634bab015dcde5c7832eb725351c3a91c1051dd8a95650502703e9c3dd5daefc2867ff3d20530dfec17310bb3dd4bb5b7d  tor-0.4.2.5.tar.gz
 6de4ada16ba58264a247da70343eabd763e992d6b6683977fc1c67b7b4a9731748a7ec9751e869ad4b4ae9c72cf71b2e12dc289bb6e2aee499917f7663f4a735  tor.initd
 2b0de119bfdf9eb57e13317b7392190b1b8272c8f96023c71d3fc29215d887e9a3d0ffcef37cdb50b18d34e4b2251f75a739e258e0bb72aabd3339418b22fd67  tor.confd
 da386ff7e387312e647f04d360517a1f4cb1efbee36f4a3a6feb89a979bb12fa350fe6dfed49af0cb076ae30bb0c527b5d54127683eaa5aa45d6940dddd89dfb  torrc.sample.patch"
