--- a/testing/frei0r-plugins/APKBUILD
+++ b/testing/frei0r-plugins/APKBUILD
@@ -1,27 +1,34 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer:
 pkgname=frei0r-plugins
-pkgver=1.6.1
+pkgver=1.7.0
 pkgrel=0
 pkgdesc="A minimalistic plugin API for video sources and filters"
 url="https://frei0r.dyne.org/"
 arch="all"
 options="!check"  # No test suite.
 license="GPL-2.0-or-later"
-makedepends="gavl-dev file cairo-dev doxygen"
-subpackages="$pkgname-dev $pkgname-doc"
+makedepends="cmake gavl-dev cairo-dev"
+subpackages="$pkgname-dev"
 source="https://files.dyne.org/frei0r/releases/frei0r-plugins-$pkgver.tar.gz"
 
 build() {
-	./configure \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
+	mkdir build && cd build
+	cmake \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DBUILD_SHARED_LIBS=True \
+		-DCMAKE_BUILD_TYPE=Release \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		${CMAKE_CROSSOPTS} ..
 	make
 }
 
 package() {
-	make DESTDIR="$pkgdir" install
+	make -C build DESTDIR="$pkgdir" install
 }
 
-sha512sums="843790389e6de83817d1c3744a91d3365864bb0c22cf6598707ccba5ec8933f6209434011cde1303e16edd89f6cde2f22aa1fb6eca3548d892a2c77332c44aac  frei0r-plugins-1.6.1.tar.gz"
+sha512sums="8c80e8e0ce8c302e633ea1f6ff4e2a141fd7a8bcb7fce25dc7f1f6521be11258a3efa1074c224c7323e6a17bc405413385be193a5c787e2f276252b50477ebce  frei0r-plugins-1.7.0.tar.gz"
