community/openlibm: upgrade to 0.7.0

--- a/community/openlibm/APKBUILD
+++ b/community/openlibm/APKBUILD
@@ -1,14 +1,14 @@
 # Contributor: Jakub Jirutka <jakub@jirutka.cz>
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=openlibm
-pkgver=0.6.0
-pkgrel=1
+pkgver=0.7.0
+pkgrel=0
 pkgdesc="High quality system independent, portable, open source libm implementation"
 url="https://openlibm.org/"
 arch="all !s390x"
 license="MIT AND BSD-2-Clause AND ISC AND LGPL-2.1-or-later"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/JuliaLang/$pkgname/archive/v$pkgver.tar.gz
+source="openlibm-$pkgver.tar.gz::https://github.com/JuliaLang/openlibm/archive/v$pkgver.tar.gz
 	powerpc_fixes.patch"
 
 build() {
@@ -24,5 +24,5 @@ package() {
 	rm -f "$pkgdir"/usr/lib/*.a
 }
 
-sha512sums="ea7770c5e82ddfe84d7490a5175439cf676f2c517f029a748cfeec174234f33ee04c42ce284753771588a36b4b9b5d8c2f72f2235408d8f9393bdf19abfec7b1  openlibm-0.6.0.tar.gz
+sha512sums="e52245ea93513fb1d9eade348f7c4ad4f1b500944024f7d52d71d43af908059e581ea77df6fc879414ff17c860263debec3aaf6ac86eea03ee1fe23d180487ed  openlibm-0.7.0.tar.gz
 76ee57a281275b2bd382f0485e4ca383566af47f3d89981b75ad764c629d82f7f0260fb41cc9eb50f0f175c88b64699aabcc732add321f4d730f38ba7a48238d  powerpc_fixes.patch"
