main/argp-standalone: rebuild with -fPIC

--- a/main/argp-standalone/APKBUILD
+++ b/main/argp-standalone/APKBUILD
@@ -2,29 +2,25 @@
 # Maintainer: Francesco Colista <francesco.colista@gmail.com>
 pkgname=argp-standalone
 pkgver=1.3
-pkgrel=3
+pkgrel=4
 pkgdesc="Hierarchial argument parsing library broken out from glibc"
 url="http://www.lysator.liu.se/~nisse/misc/"
 arch="all"
 license="GPL-2.0-or-later"
-depends=""
 makedepends="libtool automake autoconf"
-install=""
-subpackages=""
-source="http://www.lysator.liu.se/~nisse/misc/$pkgname-$pkgver.tar.gz
+source="http://www.lysator.liu.se/~nisse/misc/argp-standalone-$pkgver.tar.gz
 	001-throw-in-funcdef.patch
 	gnu89-inline.patch
 	"
 
-builddir="$srcdir"/$pkgname-$pkgver
+export CFLAGS="$CFLAGS -fPIC"
+
 prepare() {
 	default_prepare
-	cd "$builddir"
 	autoreconf -vif
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -40,7 +36,6 @@ check() {
 }
 
 package() {
-	cd "$builddir"
 	install -D -m644 argp.h "$pkgdir"/usr/include/argp.h
 	install -D -m755 libargp.a "$pkgdir"/usr/lib/libargp.a
 }
