--- a/main/musl-obstack/APKBUILD
+++ b/main/musl-obstack/APKBUILD
@@ -1,28 +1,26 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=musl-obstack
 pkgver=1.1
-pkgrel=0
+pkgrel=1
 pkgdesc="A standalone library to implement GNU libc's obstack"
 url="https://github.com/pullmoll/musl-obstack"
 arch="all"
-license="GPL-2.0"
-depends=""
-depends_dev=""
-makedepends="$depends_dev automake autoconf libtool"
-install=""
+license="GPL-2.0-or-later"
+makedepends="automake autoconf libtool"
 subpackages="$pkgname-dev"
 source="musl-obstack-$pkgver.tar.gz::https://github.com/pullmoll/musl-obstack/archive/v$pkgver.tar.gz"
-builddir="$srcdir/musl-obstack-$pkgver"
+
+prepare() {
+	default_prepare
+	./bootstrap.sh
+}
 
 build() {
-	cd "$builddir"
-	./bootstrap.sh
 	./configure --prefix=/usr
 	make
 }
 
 package() {
-	cd "$builddir"
 	make install DESTDIR="$pkgdir"
 }
 
