community/chromium: fix build on armv7
(cherry picked from commit ae019b5c972f11cdbd4d827ab7676ad1ef364f0c)

--- a/community/chromium/APKBUILD
+++ b/community/chromium/APKBUILD
@@ -112,6 +112,7 @@ source="https://commondatastorage.googleapis.com/chromium-browser-official/$pkgn
 	gcc-arm.patch
 	musl-arm-limits.patch
 	aarch64-fixes.patch
+	elf-arm.patch
 	"
 
 builddir="$srcdir"/$pkgname-$pkgver
@@ -364,4 +365,5 @@ c2c17e405863e07b312d7d37b3e8d02cdebd5decee11b0e6387256f6d90517e052fc82544513a771
 bb0f3dc1ade429a398d487ae190a278948533398c4a1085aeb35ff57fefb90a1e598008ba839423ca0acd30ba4c992950f395dba3b9994d3c7187fe68b9a93d7  gcc-fno-delete-null-pointer-checks.patch
 91296fcbdfc4b35899e2af949024c7041d85cc64644cf5fe73c8e46a0523b09d1fb8849f315bd212c1ac25caf57553e933cb4eeb8d1856960441d24b2dd20e27  gcc-arm.patch
 3bcffb36f28a01d8bb91f1c1ee1e327caebb1e139d4e8772ad15460ee69cb5ea3307a235dc83184a9e09b687882d9617f3a3ce1a7b07cbd6e11b0a5d6a6ace81  musl-arm-limits.patch
-f0a0fa663fd7a88346d69675a96dfd864364f6ba41d19a5adfbfb0f13fd784b194a60cd2c63edfcc21d6b049628eade690ff803f787dbdd29d84cd8312be4d4a  aarch64-fixes.patch"
+f0a0fa663fd7a88346d69675a96dfd864364f6ba41d19a5adfbfb0f13fd784b194a60cd2c63edfcc21d6b049628eade690ff803f787dbdd29d84cd8312be4d4a  aarch64-fixes.patch
+8f5902983f9933ed4ff5607fbe97ea8dfa00f9974c8c5b35f2611d15d2b6ba75970f71f2e307daa2155c5647210c871cf3d081c292369bf6489c802d277570fa  elf-arm.patch"
