community/mruby: modernize abuild

--- a/community/mruby/APKBUILD
+++ b/community/mruby/APKBUILD
@@ -10,21 +10,18 @@ license="MIT"
 depends=""
 makedepends="$depends_dev bison ruby"
 subpackages="$pkgname-tools $pkgname-static $pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/mruby/mruby/archive/$pkgver.tar.gz
+source="https://github.com/mruby/mruby/archive/$pkgver/$pkgname-$pkgver.tar.gz
 	build_config.rb"
 builddir="$srcdir/$pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
 	MRUBY_CONFIG="$srcdir/build_config.rb" ./minirake --verbose
 }
 
 package() {
-	cd "$builddir"
-
 	install -d "$pkgdir"/usr/bin
-	cp build/host-debug/bin/* "$pkgdir"/usr/bin/ || return 1
-	cp build/host/bin/* "$pkgdir"/usr/bin/ || return 1
+	cp build/host-debug/bin/* "$pkgdir"/usr/bin/
+	cp build/host/bin/* "$pkgdir"/usr/bin/
 
 	install -d "$pkgdir"/usr/lib
 	cp build/host/lib/*.a "$pkgdir"/usr/lib/
