--- a/community/java-lz4/APKBUILD
+++ b/community/java-lz4/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jakub Jirutka <jakub@jirutka.cz>
 pkgname=java-lz4
 _pkgname=lz4-java
-pkgver=1.3.0
-pkgrel=2
+pkgver=1.4.0
+pkgrel=0
 pkgdesc="LZ4 compression for Java"
 url="https://github.com/jpountz/lz4-java"
 arch="all"
@@ -14,7 +14,6 @@ subpackages="$pkgname-native"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/jpountz/$_pkgname/archive/$pkgver.tar.gz
 	0001-ivy-location.patch
 	0002-dont-bundle-natives.patch
-	0003-prefer-system-lib.patch
 	"
 builddir="$srcdir/$_pkgname-$pkgver"
 
@@ -28,7 +27,7 @@ build() {
 package() {
 	depends="$depends $pkgname-native"
 
-	install -m644 -D "$builddir"/dist/lz4.jar \
+	install -m644 -D "$builddir"/dist/lz4-java.jar \
 		"$pkgdir"/usr/share/java/lz4-$pkgver.jar || return 1
 	ln -sf lz4-$pkgver.jar "$pkgdir"/usr/share/java/lz4.jar
 }
@@ -36,20 +35,11 @@ package() {
 native() {
 	local soname="liblz4-java.so"
 
-	install -m755 -D "$builddir"/build/jni/*/*/$soname \
+	install -m755 -D "$builddir"/build/jni/*/*/*/*/*/$soname \
 		"$subpkgdir"/usr/lib/$soname.$pkgver || return 1
 	ln -sf $soname.$pkgver "$subpkgdir"/usr/lib/$soname
 }
 
-md5sums="b9a4eb57fd0667df96135854c9e6f139  lz4-java-1.3.0.tar.gz
-c87e95c4d7df4b89d17fef542078a61a  0001-ivy-location.patch
-d131c75a10e298751f34c6d545ed94a2  0002-dont-bundle-natives.patch
-ee4c9d7574586e74f2577523bfeab564  0003-prefer-system-lib.patch"
-sha256sums="7fdfe31304a50a830f4f2e8207cdfe58126270e2f24d7c318540e2b263bead78  lz4-java-1.3.0.tar.gz
-bb5a2779353a40a15d8ee24438a199c5c023db1605b491260afb3a628684001b  0001-ivy-location.patch
-117acb8ff84b387cd91acec340b870fab3359804cdd76e9f0fc574f013d30141  0002-dont-bundle-natives.patch
-548168e3344538e87be537b13d746c3e73fb3ed29f0daa1776eb62f7ba8240c1  0003-prefer-system-lib.patch"
-sha512sums="417141a02b1ed599499b352d96e3e7a2b84376dbd84f7042563c90e30b3c6d5ebc132f9e96eeff717bc790e615123acb53887bfaea8566870cba78d05b2d8048  lz4-java-1.3.0.tar.gz
+sha512sums="5032f47e66e66c1e3c6ee5eeb431b2eb70578b5406e3a01fa501951f3864e67a70f39127f937f5af1bc943401b673e412ff3d99fb9539f3e6fa1a28a9b002b56  lz4-java-1.4.0.tar.gz
 1e5d1f5bdb87ad89efa423af2ec83921ab7a7fc3de36e6398cbfa90e1b2e07d11834decddf97a17b3dbadf7d2575770b629b35435ce8f1d5ac078554026d1789  0001-ivy-location.patch
-cc570080f7682525709ec1999fe5cf8e0ccc6f41dd34ab76159321c02ca504041d4d2bc008f04e312550bd1de611ed77d99dd7f2101a0a3600cbea7ab16ce09d  0002-dont-bundle-natives.patch
-b94fd00b7a1410c55103a1a15422641970366a36dd3d87cb25cd39f90fc740cbf92affea6af6bae2595663bd1e2943ab129399c3907168528a91941e19e60804  0003-prefer-system-lib.patch"
+cc570080f7682525709ec1999fe5cf8e0ccc6f41dd34ab76159321c02ca504041d4d2bc008f04e312550bd1de611ed77d99dd7f2101a0a3600cbea7ab16ce09d  0002-dont-bundle-natives.patch"
