community/java-lz4: modernize abuild

--- a/community/java-lz4/APKBUILD
+++ b/community/java-lz4/APKBUILD
@@ -8,7 +8,7 @@ pkgdesc="LZ4 compression for Java"
 url="https://github.com/jpountz/lz4-java"
 arch="all"
 license="Apache-2.0"
-depends="openjdk8-jre-base"
+depends="openjdk8-jre-base $pkgname-native"
 makedepends="apache-ant openjdk8"
 subpackages="$pkgname-native"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/jpountz/$_pkgname/archive/$pkgver.tar.gz
@@ -18,25 +18,22 @@ source="$_pkgname-$pkgver.tar.gz::https://github.com/jpountz/$_pkgname/archive/$
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
-
-	ant ivy-bootstrap || return 1
+	ant ivy-bootstrap
 	ant jar -lib .ant -Divy.default.ivy.user.dir=/tmp/ivy2
 }
 
 package() {
-	depends="$depends $pkgname-native"
-
 	install -m644 -D "$builddir"/dist/lz4-java.jar \
-		"$pkgdir"/usr/share/java/lz4-$pkgver.jar || return 1
+		"$pkgdir"/usr/share/java/lz4-$pkgver.jar
 	ln -sf lz4-$pkgver.jar "$pkgdir"/usr/share/java/lz4.jar
 }
 
 native() {
+	depends=""
 	local soname="liblz4-java.so"
 
 	install -m755 -D "$builddir"/build/jni/*/*/*/*/*/$soname \
-		"$subpkgdir"/usr/lib/$soname.$pkgver || return 1
+		"$subpkgdir"/usr/lib/$soname.$pkgver
 	ln -sf $soname.$pkgver "$subpkgdir"/usr/lib/$soname
 }
 
