--- a/main/nagios-plugins/APKBUILD
+++ b/main/nagios-plugins/APKBUILD
@@ -4,11 +4,11 @@
 # Maintainer: Jeff Bilyk <jbilyk@gmail.com>
 pkgname=nagios-plugins
 pkgver=2.3.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Plugins for Nagios to check services on hosts"
 url="https://nagios-plugins.org"
 arch="all"
-license="GPL-2.0"
+license="GPL-3.0-only"
 _depends_by_ssh="openssh-client"
 _depends_dig="bind-tools"
 _depends_disk_smb="samba-client"
@@ -21,7 +21,7 @@ _depends_snmp="net-snmp-tools"
 makedepends="openssh-client bind-tools samba-client fping grep rpcbind
 	lm-sensors net-snmp-tools
 	file freeradius-client-dev libdbi-dev libpq linux-headers mariadb-dev
-	mariadb-connector-c-dev
+	mariadb-connector-c-dev perl
 	net-snmp-dev openldap-dev opensmtpd openssl-dev postgresql-dev"
 install="$pkgname.post-upgrade"
 pkgusers="nagios"
