--- a/community/lua-compat53/APKBUILD
+++ b/community/lua-compat53/APKBUILD
@@ -21,8 +21,6 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/keplerproject/$_pkgname/arch
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
-	cd "$builddir"
-
 	local lver; for lver in $_luaversions; do
 		msg "Building for Lua $lver..."
 
@@ -48,7 +46,7 @@ _package() {
 
 	local path; for path in lib/lua/$lver share/lua/$lver; do
 		mkdir -p "$subpkgdir"/usr/${path%/*}
-		mv "$builddir"/build/$path "$subpkgdir"/usr/$path/ || return 1
+		mv "$builddir"/build/$path "$subpkgdir"/usr/$path/
 	done
 
 	mkdir -p "$rockdir"
