--- a/community/lua-lunix/APKBUILD
+++ b/community/lua-lunix/APKBUILD
@@ -16,15 +16,13 @@ for _v in $_luaversions; do
 	makedepends="$makedepends lua$_v-dev"
 	subpackages="$subpackages lua$_v-$_pkgname:_package"
 done
-source="$pkgname-$pkgver.tar.gz::https://github.com/wahern/lunix/archive/rel-$pkgver.tar.gz"
+source="https://github.com/wahern/lunix/archive/rel-$pkgver/$pkgname-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-rel-$pkgver"
 
 build() {
-	cd "$builddir"
-
 	local lver; for lver in $_luaversions; do
 		msg "Building for Lua $lver..."
-		make all$lver || return 1
+		make all$lver
 	done
 }
 
