--- a/testing/dub/APKBUILD
+++ b/testing/dub/APKBUILD
@@ -1,18 +1,18 @@
 # Contributor: Mathias LANG <pro.mathias.lang@gmail.com>
 # Maintainer: Mathias LANG <pro.mathias.lang@gmail.com>
 pkgname=dub
-pkgver=1.18.0
+pkgver=1.19.0
 pkgrel=0
 pkgdesc="Package and build management system for D"
 url="http://code.dlang.org/"
-arch="x86_64"
+arch="all !ppc64le" # GDC does not support PPC64le
 license="MIT"
 depends="libcurl"
-makedepends="ldc ldc-static bash curl-dev"
+makedepends="gcc-gdc gdmd bash curl-dev"
 source="$pkgname-$pkgver.zip::https://github.com/dlang/dub/archive/v$pkgver.zip"
 
 build() {
-	DMD=ldmd2 GITVER="v$pkgver" ./build.sh
+	DC=gdmd GITVER="v$pkgver" ./build.sh
 }
 
 check() {
@@ -23,4 +23,4 @@ package() {
 	install -s -D "$builddir/bin/dub" "$pkgdir/usr/bin/dub"
 }
 
-sha512sums="454479867cce89d6a555505bb6b51b11192c18ae622239c01b0b9914d0c007cc6aa9b68274e80baa2eea068ae4c41c6838eef516c7ed57a947759cb37452dfa8  dub-1.18.0.zip"
+sha512sums="8cdeb1b2d07a003c02e47f43f56362aeac257110cc4a477f5fe2e83ff0b979f5e1b3aa553d75d97b16c22230ff823ac3cf9dec40c2c24211cac969bfe7deb522  dub-1.19.0.zip"
