community/mruby: remove subpackage -dev

--- a/community/mruby/APKBUILD
+++ b/community/mruby/APKBUILD
@@ -9,7 +9,7 @@ arch="all !armhf !armv7"
 license="MIT"
 depends=""
 makedepends="$depends_dev bison ruby"
-subpackages="$pkgname-tools $pkgname-static $pkgname-dev"
+subpackages="$pkgname-tools $pkgname-static"
 source="https://github.com/mruby/mruby/archive/$pkgver/$pkgname-$pkgver.tar.gz
 	build_config.rb"
 builddir="$srcdir/$pkgname-$pkgver"
