community/mruby: disable on x86 (build failed)

--- a/community/mruby/APKBUILD
+++ b/community/mruby/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2.1.0
 pkgrel=1
 pkgdesc="Lightweight Ruby"
 url="http://mruby.org"
-arch="all !armhf !armv7"
+arch="all !armhf !armv7 !x86"
 license="MIT"
 depends=""
 makedepends="$depends_dev bison ruby"
