main/argp-standalone: avoid modify CFLAGS in global scope

--- a/main/argp-standalone/APKBUILD
+++ b/main/argp-standalone/APKBUILD
@@ -13,14 +13,13 @@ source="http://www.lysator.liu.se/~nisse/misc/argp-standalone-$pkgver.tar.gz
 	gnu89-inline.patch
 	"
 
-export CFLAGS="$CFLAGS -fPIC"
-
 prepare() {
 	default_prepare
 	autoreconf -vif
 }
 
 build() {
+	CFLAGS="$CFLAGS -fPIC" \
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
