--- a/testing/gpm/APKBUILD
+++ b/testing/gpm/APKBUILD
@@ -21,6 +21,7 @@ source="http://www.nico.schottelius.org/software/gpm/archives/$pkgname-$pkgver.t
 	install-unversioned-solibrary.patch
 	musl-fixes.patch
 	constify-format-strings.patch
+	gpm-include-sysmacros.patch
 
 	$pkgname.initd
 	$pkgname.confd
@@ -41,6 +42,7 @@ build() {
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
 		--disable-static
+	export CPPFLAGS="$CPPFLAGS -I$builddir/src/headers"
 	make
 }
 
@@ -70,4 +72,5 @@ ec21b7029e0880b342bca5a70522e33d5cabbf77c44c1dd23b16d829d8fcc6cadcdf77b01724a91a
 45d3a20a8f9f00f78b21c10143e138add17d414e9b5ecc28d9efee9c2190450c79dca00b13a8247ee7753ff778b09bc88fe8c512366d5b1622981bb5d612f933  musl-fixes.patch
 36a5059c6336010b504ec6fc53c2d3df0811b1f1249c0e04c13066db06667119377a21e58121aaa8d4b620be2a5c21da0b018f168e36a44f85802cc50c936ba5  constify-format-strings.patch
 d268504bd0cf83706863a8af5c5719b0d192c34ae6a78ff0378521841eca242b39a6e6891080a5fc5512732f84e7439697ba92bfda3ecc1aaebd36b16e946477  gpm.initd
-0e7c96f29222d33301fc9c5c8cf409b7dbe6cbb1e79d76444ae5724e8b793679d3ea597a8ad64187e85680799847632095e469445ae56f893616cb0235a29f3a  gpm.confd"
+0e7c96f29222d33301fc9c5c8cf409b7dbe6cbb1e79d76444ae5724e8b793679d3ea597a8ad64187e85680799847632095e469445ae56f893616cb0235a29f3a  gpm.confd
+62d294f900ba1922119ebc87f97e86b1653647e03576c982011bf4f629332cc703f3994d5cc4b9bf2dac3c18636a61e420000d16cfdc7c284185c9442cce5b64  gpm-include-sysmacros.patch"
