--- a/main/python3/APKBUILD
+++ b/main/python3/APKBUILD
@@ -2,8 +2,8 @@
 # Contributor: Kiyoshi Aman <kiyoshi.aman@gmail.com>
 
 pkgname=python3
-# the python2-tkinter's pkgver needs to be synchronized with this.
-pkgver=3.8.0
+# the python3-tkinter's pkgver needs to be synchronized with this.
+pkgver=3.8.1
 _basever="${pkgver%.*}"
 pkgrel=0
 pkgdesc="A high-level scripting language"
@@ -32,7 +32,6 @@ builddir="$srcdir/Python-$pkgver"
 prepare() {
 	default_prepare
 
-	cd "$builddir"
 	# force system libs
 	rm -r Modules/expat \
 		Modules/_ctypes/darwin* \
@@ -40,8 +39,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
 	# --enable-optimizations is not enabled because it
 	# is very, very slow as many tests are ran sequentially
 	# for profile guided optimizations. additionally it
@@ -68,8 +65,6 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	# test that we reach recursionlimit before we segfault
 	cat > test-stacksize.py <<-EOF
 	import threading
@@ -124,7 +119,6 @@ EOF
 }
 
 package() {
-	cd "$builddir"
 	make -j1 DESTDIR="$pkgdir" EXTRA_CFLAGS="$CFLAGS" install maninstall
 	install -Dm644 LICENSE "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 	# those are provided by python3-tkinter
@@ -136,9 +130,9 @@ dev() {
 	default_dev
 
 	# pyconfig.h is needed runtime so we move it back
-	mkdir -p "$pkgdir"/usr/include/python${_basever}
-	mv "$subpkgdir"/usr/include/python${_basever}/pyconfig.h \
-		"$pkgdir"/usr/include/python${_basever}/
+	mkdir -p "$pkgdir"/usr/include/python$_basever
+	mv "$subpkgdir"/usr/include/python$_basever/pyconfig.h \
+		"$pkgdir"/usr/include/python$_basever/
 }
 
 tests() {
@@ -161,6 +155,6 @@ wininst() {
 		"$subpkgdir"/usr/lib/python$_basever/distutils/command
 }
 
-sha512sums="5f9bfcb3acdf592770a9d5abd2c32c68c55a49b92f958ded069e3ef31cf2d415e67112b4f6738fab237dc29e5c622298719946d2e9471e7e78e3a6bdf2fac1d1  Python-3.8.0.tar.xz
+sha512sums="d41381848cc1ec8009643b71875f395a9ac2c8e12a5b1efef33caf8a9e99a337c790d4354695c85352d11b62092ae372b5af62f78724363fcbf3504ff9a6ddca  Python-3.8.1.tar.xz
 37b6ee5d0d5de43799316aa111423ba5a666c17dc7f81b04c330f59c1d1565540eac4c585abe2199bbed52ebe7426001edb1c53bd0a17486a2a8e052d0f494ad  fix-xattrs-glibc.patch
 ab8eaa2858d5109049b1f9f553198d40e0ef8d78211ad6455f7b491af525bffb16738fed60fc84e960c4889568d25753b9e4a1494834fea48291b33f07000ec2  musl-find_library.patch"
