community/python3-tkinter: upgrade to 3.8.1

--- a/community/python3-tkinter/APKBUILD
+++ b/community/python3-tkinter/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Kiyoshi Aman <kiyoshi.aman@gmail.com>
 
 pkgname=python3-tkinter
-pkgver=3.8.0
+pkgver=3.8.1
 _basever="${pkgver%.*}"
 pkgrel=0
 pkgdesc="A graphical user interface for the Python"
@@ -34,8 +34,6 @@ prepare() {
 		fi
 	fi
 	default_prepare
-	cd "$builddir"
-
 	# force system libs
 	rm -r Modules/expat \
 		Modules/_ctypes/darwin* \
@@ -43,8 +41,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
-
 	# --enable-optimizations is not enabled because it
 	# is very, very slow as many tests are ran sequentially
 	# for profile guided optimizations. additionally it
@@ -70,21 +66,19 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	# we only care about idle, and tkinter
-	make DESTDIR="$builddir"/tmpinstall sharedinstall libinstall \
-		|| return 1
+	make DESTDIR="$builddir"/tmpinstall sharedinstall libinstall
 
-	mkdir -p "$pkgdir"/usr/lib/python${_basever}/lib-dynload \
+	mkdir -p "$pkgdir"/usr/lib/python$_basever/lib-dynload \
 		"$pkgdir"/usr/bin
 
 	for lib in idlelib tkinter; do
-		mv "$builddir"/tmpinstall/usr/lib/python${_basever}/$lib \
-			"$pkgdir"/usr/lib/python${_basever}/
+		mv "$builddir"/tmpinstall/usr/lib/python$_basever/$lib \
+			"$pkgdir"/usr/lib/python$_basever/
 	done
 
-	mv "$builddir"/tmpinstall/usr/lib/python${_basever}/lib-dynload/_tkinter*.so \
-		"$pkgdir"/usr/lib/python${_basever}/lib-dynload/
+	mv "$builddir"/tmpinstall/usr/lib/python$_basever/lib-dynload/_tkinter*.so \
+		"$pkgdir"/usr/lib/python$_basever/lib-dynload/
 
 	mv "$builddir"/tmpinstall/usr/bin/idle* \
 		"$pkgdir"/usr/bin/
@@ -115,6 +109,6 @@ _idle() {
 	_mv_files usr/lib/python*/idlelib
 }
 
-sha512sums="5f9bfcb3acdf592770a9d5abd2c32c68c55a49b92f958ded069e3ef31cf2d415e67112b4f6738fab237dc29e5c622298719946d2e9471e7e78e3a6bdf2fac1d1  Python-3.8.0.tar.xz
+sha512sums="d41381848cc1ec8009643b71875f395a9ac2c8e12a5b1efef33caf8a9e99a337c790d4354695c85352d11b62092ae372b5af62f78724363fcbf3504ff9a6ddca  Python-3.8.1.tar.xz
 ab8eaa2858d5109049b1f9f553198d40e0ef8d78211ad6455f7b491af525bffb16738fed60fc84e960c4889568d25753b9e4a1494834fea48291b33f07000ec2  musl-find_library.patch
 37b6ee5d0d5de43799316aa111423ba5a666c17dc7f81b04c330f59c1d1565540eac4c585abe2199bbed52ebe7426001edb1c53bd0a17486a2a8e052d0f494ad  fix-xattrs-glibc.patch"
