community/lld: set default thread stack size to 2MB
lld uses std::call_once to create threads and apparently it uses much
stack space when linking things like chromium. Increase the default
stack size to 2MB (which is the double what windows has)

fixes #11086

--- a/community/lld/APKBUILD
+++ b/community/lld/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=lld
 pkgver=9.0.1
-pkgrel=0
+pkgrel=1
 _llvmver=${pkgver%%.*}
 pkgdesc="The LLVM Linker"
 url="https://llvm.org"
@@ -30,7 +30,7 @@ build() {
 		-DCMAKE_VERBOSE_MAKEFILE=OFF \
 		-DCMAKE_C_FLAGS_MINSIZEREL_INIT="$CFLAGS" \
 		-DCMAKE_CXX_FLAGS_MINSIZEREL_INIT="$CXXFLAGS -fpermissive" \
-		-DCMAKE_EXE_LINKER_FLAGS_MINSIZEREL_INIT="$LDFLAGS" \
+		-DCMAKE_EXE_LINKER_FLAGS_MINSIZEREL_INIT="$LDFLAGS -Wl,-z,stack-size=2097152" \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_SKIP_INSTALL_RPATH=ON \
 		-DLLVM_INCLUDE_TESTS=ON
