--- a/main/wget/APKBUILD
+++ b/main/wget/APKBUILD
@@ -9,13 +9,10 @@ pkgdesc="A network utility to retrieve files from the Web"
 url="https://www.gnu.org/software/wget/wget.html"
 arch="all"
 license="GPL-3.0-or-later"
-depends=""
 makedepends="libidn2-dev openssl-dev perl"
 checkdepends="perl-http-daemon"
 subpackages="$pkgname-doc"
-install=""
-source="https://ftp.gnu.org/gnu/$pkgname/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="https://ftp.gnu.org/gnu/wget/wget-$pkgver.tar.gz"
 
 # secfixes:
 #   1.20.3-r0:
@@ -30,7 +27,6 @@ builddir="$srcdir/$pkgname-$pkgver"
 #     - CVE-2017-13090
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -45,15 +41,12 @@ build() {
 }
 
 check() {
-	cd "$builddir"
-
 	# FIXME: We're not running top-level "check" to skip fuzz tests that
 	# are currently broken.
 	make -C tests check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	rm -rf "$pkgdir"/usr/lib
