main/clang: increase default thread stack size to 2MiB
Apparently clang++ crashes when building chromium due to stack overflow.

ref #11086
upstream report: https://github.com/llvm/llvm-project/issues/76

--- a/main/clang/APKBUILD
+++ b/main/clang/APKBUILD
@@ -4,7 +4,7 @@
 pkgname=clang
 # Note: Update together with llvm.
 pkgver=9.0.1
-pkgrel=1
+pkgrel=2
 _llvmver=${pkgver%%.*}
 pkgdesc="A C language family front-end for LLVM"
 arch="all"
@@ -51,7 +51,7 @@ build() {
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
 		-DCMAKE_C_FLAGS_MINSIZEREL_INIT="$CFLAGS" \
 		-DCMAKE_CXX_FLAGS_MINSIZEREL_INIT="$CXXFLAGS" \
-		-DCMAKE_EXE_LINKER_FLAGS_MINSIZEREL_INIT="$LDFLAGS" \
+		-DCMAKE_EXE_LINKER_FLAGS_MINSIZEREL_INIT="$LDFLAGS -Wl,-z,stack-size=2097152" \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_VERBOSE_MAKEFILE=OFF \
 		-DCLANG_VENDOR=Alpine \
