main/ipvsadm: upgrade to 1.31

--- a/main/ipvsadm/APKBUILD
+++ b/main/ipvsadm/APKBUILD
@@ -1,21 +1,19 @@
 # Contributor: Leonardo Arena <rnalrd@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ipvsadm
-pkgver=1.30
+pkgver=1.31
 pkgrel=0
 pkgdesc="The IP Virtual Server administration utility"
 url="http://www.linuxvirtualserver.org/software/ipvs.html"
 arch="all"
-license="GPL-2.0"
-depends_dev="libnl3-dev popt-dev"
-makedepends="$depends_dev linux-headers"
+license="GPL-2.0-or-later"
+makedepends="libnl3-dev popt-dev linux-headers"
 subpackages="$pkgname-doc"
 source="https://kernel.org/pub/linux/utils/kernel/ipvsadm/ipvsadm-$pkgver.tar.xz
 	$pkgname.initd
 	"
 
 build() {
-	cd "$builddir"
 	make libs && make BUILD_ROOT="$pkgdir" \
 		MANDIR=usr/share/man \
 		SBIN="$pkgdir/usr/sbin" \
@@ -23,7 +21,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make -j1 BUILD_ROOT="$pkgdir" \
 		MANDIR=usr/share/man \
 		SBIN="$pkgdir/usr/sbin" \
@@ -35,5 +32,5 @@ package() {
 	# install -m644 -D "$srcdir"/$pkgname.confd "$pkgdir"/etc/conf.d/$pkgname
 }
 
-sha512sums="e6b46dcaf36ccbd4cef98a57f88c6bb27bbe86c72974ced317336847eabdf3dc20c0d951c452dfb6ec81df7aee912ba37f7311822c29265582195c95d864bc24  ipvsadm-1.30.tar.xz
+sha512sums="1c7187405771e702eff0009d688fa697375b833a486ff88b41a4a0dcfaa3e9884c7e3bc34375efea5f6a2d025847c9fac9fd6ba694ec3bf2fc9d357eef2cb631  ipvsadm-1.31.tar.xz
 23d90c882478e2809b5a0e4fa106a02b88033d316405b8c59018491b38ad03652767587f626ce29a476f9db77b458387f545995c9c0a99d04c0ddbdd733f030c  ipvsadm.initd"
