testing/pgcli: upgrade to 2.2.0

--- a/testing/pgcli/APKBUILD
+++ b/testing/pgcli/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Thomas Boerger <thomas@webhippie.de>
 # Maintainer: Thomas Boerger <thomas@webhippie.de>
 pkgname=pgcli
-pkgver=2.1.1
-pkgrel=2
+pkgver=2.2.0
+pkgrel=0
 pkgdesc="Postgres CLI with autocompletion and syntax highlighting"
 options="!check" # Tests fail
 url="https://www.pgcli.com"
@@ -21,7 +21,7 @@ depends="python3
 	py3-cli_helpers>1.0.0"
 checkdepends="pytest py3-mock"
 makedepends="python3-dev"
-source="$pkgname-$pkgver.tar.gz::https://files.pythonhosted.org/packages/source/${pkgname:0:1}/$pkgname/$pkgname-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://files.pythonhosted.org/packages/source/p/pgcli/pgcli-$pkgver.tar.gz"
 
 check() {
 	python3 -m pytest tests
@@ -35,4 +35,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="5fe43d82c9ac840ceb9d458d193dfe37af31ac429c58754cfc24bd5377ebc76e0f72a3a7a04f07a41a329ee9170b86365bf5e7ca387b1433e8ac94299fc574aa  pgcli-2.1.1.tar.gz"
+sha512sums="20700a66b5fd91a6819bdc86184ec2ac1bb2f6e4a0e14b3f3034ba7f15b3c15d3a5d70a8250b1652c634cc3c4dedd17ab246b6f295eceddc9c332e57fc164dd5  pgcli-2.2.0.tar.gz"
