community/recon-ng: upgrade to 5.1.0

--- a/community/recon-ng/APKBUILD
+++ b/community/recon-ng/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=recon-ng
-pkgver=5.0.1
+pkgver=5.1.0
 pkgrel=0
 pkgdesc="Full-featured Web Reconnaissance framework written in Python"
 url="https://bitbucket.org/LaNMaSteR53/recon-ng"
@@ -20,6 +20,8 @@ package() {
 	for pkg in recon-web recon-cli recon-ng; do
 		ln -s /usr/share/$pkgname/$pkg "$pkgdir"/usr/bin/$pkg
 	done
+	rm -f "$pkgdir"/usr/share/recon-ng/Dockerfile \
+		"$pkgdir"/usr/share/recon-ng/docker-compose.yml
 }
 
-sha512sums="8b336d8904b499093d3478136304ff35e2041fde986d0f0dad04a552ac8bf0e37d845c86dff2d02a67d25aafd42a42472c051a1b6970ec70fa37c392ff9293c4  recon-ng-5.0.1.tar.gz"
+sha512sums="9643996419eeb1f65357787890cef75247f0d83f1ccfd66fcc2286116441e03427f74e473dabb18ac9401c0476addde070bac22a9d3015a617e342c30b532edc  recon-ng-5.1.0.tar.gz"
