--- a/main/beep/APKBUILD
+++ b/main/beep/APKBUILD
@@ -1,27 +1,24 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=beep
-pkgver=1.4.4
+pkgver=1.4.6
 pkgrel=0
 pkgdesc="A terminal bell"
 url="https://github.com/spkr-beep/beep"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-or-later"
 makedepends="linux-headers"
 subpackages="$pkgname-doc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/spkr-beep/beep/archive/v$pkgver.tar.gz
 	fix-gzip-man.patch"
-builddir="$srcdir"/$pkgname-$pkgver
 
 build() {
-	cd "$builddir"
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="cfaecbebbbd0596bee5f304c3bd74968d06873037d054def0907dfd36e5bd6e7fbd7d7051eacedd20480b88f8b4e343db05eb5d3dde0fdced33756545b630373  beep-1.4.4.tar.gz
+sha512sums="753ab7f22624defba5645c2fceb1382137641fa8f219875783d5809d0bd344c530176b46a61a1d783bb2e5feb17c8137868e02744e1ee5d9e7ec331dbe1fe417  beep-1.4.6.tar.gz
 b0828a0ee0050ca9f601b824f95af78a4db556e1f7b94d8d2a9927a939629fcddf03151c283ed3552c03fb750e06c6880781dcf31926869b66a4793bc6b381fc  fix-gzip-man.patch"
