--- a/community/py3-scipy/APKBUILD
+++ b/community/py3-scipy/APKBUILD
@@ -1,16 +1,18 @@
 # Contributor: Martell Malone <martellmalone@gmail.com>
 # Maintainer: Isaac Dunham <ibid.ag@gmail.com>
 pkgname=py3-scipy
-pkgver=1.3.3
-pkgrel=1
+pkgver=1.4.1
+pkgrel=0
 pkgdesc="Python library for scientific computing"
 url="https://www.scipy.org"
 arch="all"
 license="BSD-3-Clause"
 depends="py3-numpy-f2py"
 makedepends="cython gfortran openblas-dev>=0.3.0 py3-numpy-dev py3-setuptools
-	python3-dev lapack-dev"
-source="https://github.com/scipy/scipy/releases/download/v$pkgver/scipy-$pkgver.tar.xz"
+	python3-dev lapack-dev py3-pybind11-dev"
+source="https://github.com/scipy/scipy/releases/download/v$pkgver/scipy-$pkgver.tar.xz
+	missing-int64_t.patch
+	"
 builddir="$srcdir"/scipy-$pkgver
 
 replaces=py-scipy # Backwards compatibility
@@ -25,4 +27,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="2960862ab90a580b5267421e6a2f1df9382eb7dd674f1d7b46bccb4f425513c469d4ba7eb0ce39f9074f624f20b0fcbc9ce18debbba0fc118aed5087e2a0e6bd  scipy-1.3.3.tar.xz"
+sha512sums="c7e1a1695a937ed7b712bb0750b0359b9d80254ef611ba924c9062862a61d7d36705a168b5102202009b16487596c66e4a892feaa1171012e23f71b0520c290f  scipy-1.4.1.tar.xz
+df346dc84e4ec6773e1e7fe21dccf6d124c8a498d4daba77d3abd399fef1aa711b9799541c5e7b6b3ee209c738817cc2680810dcd2c4ee61686292536e6b00d1  missing-int64_t.patch"
