community/ffmpeg: add support for AV1 codec on all archies except armhf and armv7
- Modernize

--- a/community/ffmpeg/APKBUILD
+++ b/community/ffmpeg/APKBUILD
@@ -4,17 +4,38 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ffmpeg
 pkgver=4.2.1
-pkgrel=4
+pkgrel=5
 pkgdesc="Complete and free Internet live audio and video broadcasting solution for Linux/Unix"
 url="https://ffmpeg.org/"
 arch="all"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 options="!check" # tests/data/hls-lists.append.m3u8 fails
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs"
-makedepends="gnutls-dev lame-dev libvorbis-dev xvidcore-dev zlib-dev libvdpau-dev
-	imlib2-dev x264-dev libtheora-dev coreutils bzip2-dev perl-dev
-	libvpx-dev sdl2-dev libxfixes-dev libva-dev alsa-lib-dev
-	v4l-utils-dev yasm opus-dev x265-dev libass-dev libssh-dev"
+makedepends="
+	alsa-lib-dev
+	coreutils
+	bzip2-dev
+	gnutls-dev
+	imlib2-dev
+	lame-dev
+	libass-dev
+	libssh-dev
+	libtheora-dev
+	libva-dev
+	libvdpau-dev
+	libvorbis-dev
+	libvpx-dev
+	libxfixes-dev
+	opus-dev
+	perl-dev
+	sdl2-dev
+	v4l-utils-dev
+	x264-dev
+	x265-dev
+	xvidcore-dev
+	yasm
+	zlib-dev
+	"
 checkdepends="rsync"
 source="https://ffmpeg.org/releases/ffmpeg-$pkgver.tar.xz
 	0001-libavutil-clean-up-unused-FF_SYMVER-macro.patch
@@ -74,6 +95,15 @@ source="https://ffmpeg.org/releases/ffmpeg-$pkgver.tar.xz
 #     - CVE-2017-14223
 #     - CVE-2017-14225
 
+# add support for AV1 codec for all archies except armhf and armv7
+# as aom is not available on them
+_aom="";
+
+case "$CARCH" in
+	x86|x86_64|aarch64|ppc64le|s390x )
+		_aom="--enable-libaom"; makedepends="$makedepends aom-dev" ;;
+esac
+
 build() {
 	local _dbg="--disable-debug"
 	local _asm=""
@@ -110,7 +140,7 @@ build() {
 		--enable-vaapi \
 		--enable-vdpau \
 		--enable-libopus \
-		$_asm $_dbg
+		$_asm $_aom $_dbg
 	make
 	${CC:-gcc} -o tools/qt-faststart $CFLAGS tools/qt-faststart.c
 	make doc/ffmpeg.1 doc/ffplay.1
