--- a/community/gst-plugins-bad/APKBUILD
+++ b/community/gst-plugins-bad/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=gst-plugins-bad
 pkgver=1.16.2
-pkgrel=1
+pkgrel=2
 pkgdesc="GStreamer streaming media framework bad plug-ins"
 url="https://gstreamer.freedesktop.org"
 arch="all"
@@ -11,7 +11,7 @@ replaces="gst-plugins-bad1"
 makedepends="alsa-lib-dev bluez-dev bzip2-dev curl-dev directfb-dev faac-dev
 	faad2-dev flite-dev glib-dev glu-dev gsm-dev gst-plugins-base-dev
 	gstreamer-dev libass-dev libdc1394-dev libexif-dev libmms-dev
-	libmodplug-dev libsrtp-dev libvdpau-dev libwebp-dev
+	libmodplug-dev libsrtp-dev libvdpau-dev libwebp-dev libnice-dev
 	libx11-dev mesa-dev meson neon-dev openssl-dev opus-dev orc-compiler
 	orc-dev spandsp-dev tiff-dev x265-dev vulkan-loader-dev vulkan-headers
 	wayland-dev wayland-protocols gobject-introspection-dev"
