main/libva: use release version

--- a/main/libva/APKBUILD
+++ b/main/libva/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libva
 pkgver=2.6.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Video Acceleration (VA) API for Linux"
 url="https://01.org/linuxmedia"
 arch="all"
@@ -11,8 +11,7 @@ license="MIT"
 depends_dev="libx11-dev libxext-dev libxfixes-dev libdrm-dev"
 makedepends="$depends_dev meson wayland-dev"
 subpackages="$pkgname-dev"
-source="$pkgname-$pkgver.tar.gz::https://github.com/intel/libva/archive/$pkgver.pre1.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver.pre1
+source="$pkgname-$pkgver.tar.gz::https://github.com/intel/libva/archive/$pkgver.tar.gz"
 
 prepare() {
 	( if [ -f "$startdir"/../libva-glx/APKBUILD ]; then
@@ -22,12 +21,10 @@ prepare() {
 			die "libva and libva-glx needs to be same version"
 		fi
 	fi )
-	cd "$builddir"
 	default_prepare
 }
 
 build() {
-	cd "$builddir"
 	meson builddir \
 		--prefix=/usr \
 		-Dwith_glx=no \
@@ -36,8 +33,7 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C builddir install
 }
 
-sha512sums="8a7de81367371d31f4bd988dec0ec9c47e6c89fcb17e6426e7b859fca63fb75ad57e555d658ce5cceac00dfcbc93428e625ef58da168c881f819a41134603232  libva-2.6.0.tar.gz"
+sha512sums="190fd9875d8ec91e94d42c41b770bb51ef9f430534f99d22fa394d6e4cf8dd308ffac61a37171855e4b499982c3cc59925d238b131dd2261a3beaae03e4937d0  libva-2.6.0.tar.gz"
