--- a/main/libva-glx/APKBUILD
+++ b/main/libva-glx/APKBUILD
@@ -4,7 +4,7 @@
 
 pkgname=libva-glx
 pkgver=2.6.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Video Acceleration (VA) API for Linux with MESA support"
 url="https://01.org/linuxmedia"
 arch="all"
@@ -13,8 +13,8 @@ license="MIT"
 depends_dev="libva-dev mesa-dev libxfixes-dev"
 makedepends="$depends_dev meson wayland-dev"
 subpackages="$pkgname-dev"
-source="libva-$pkgver.tar.gz::https://github.com/intel/libva/archive/${pkgver}.pre1.tar.gz"
-builddir="$srcdir"/libva-$pkgver.pre1
+source="libva-$pkgver.tar.gz::https://github.com/intel/libva/archive/$pkgver.tar.gz"
+builddir="$srcdir"/libva-$pkgver
 
 prepare() {
 	( if [ -f "$startdir"/../libva/APKBUILD ]; then
@@ -24,12 +24,10 @@ prepare() {
 			die "libva and libva-glx needs to be same version"
 		fi
 	fi )
-	cd "$builddir"
 	default_prepare
 }
 
 build() {
-	cd "$builddir"
 	meson builddir \
 		--prefix=/usr\
 		-Dwith_glx=yes \
@@ -38,17 +36,16 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	DESTDIR="$pkgdir" ninja -C builddir install
 
-	mkdir -p ${builddir}/temp/usr/lib/pkgconfig ${builddir}/temp/usr/include/va
+	mkdir -p $builddir/temp/usr/lib/pkgconfig $builddir/temp/usr/include/va
 
-	mv ${pkgdir}/usr/lib/libva-glx* ${builddir}/temp/usr/lib
-	mv ${pkgdir}/usr/include/va/va_glx.h ${builddir}/temp/usr/include/va
-	mv ${pkgdir}/usr/include/va/va_backend_glx.h ${builddir}/temp/usr/include/va
-	mv ${pkgdir}/usr/lib/pkgconfig/libva-glx.pc ${builddir}/temp/usr/lib/pkgconfig
-	rm -rf ${pkgdir}/*
-	mv ${builddir}/temp/* ${pkgdir}
+	mv $pkgdir/usr/lib/libva-glx* $builddir/temp/usr/lib
+	mv $pkgdir/usr/include/va/va_glx.h $builddir/temp/usr/include/va
+	mv $pkgdir/usr/include/va/va_backend_glx.h $builddir/temp/usr/include/va
+	mv $pkgdir/usr/lib/pkgconfig/libva-glx.pc $builddir/temp/usr/lib/pkgconfig
+	rm -rf $pkgdir/*
+	mv $builddir/temp/* $pkgdir
 }
 
-sha512sums="8a7de81367371d31f4bd988dec0ec9c47e6c89fcb17e6426e7b859fca63fb75ad57e555d658ce5cceac00dfcbc93428e625ef58da168c881f819a41134603232  libva-2.6.0.tar.gz"
+sha512sums="190fd9875d8ec91e94d42c41b770bb51ef9f430534f99d22fa394d6e4cf8dd308ffac61a37171855e4b499982c3cc59925d238b131dd2261a3beaae03e4937d0  libva-2.6.0.tar.gz"
