--- a/main/datefudge/APKBUILD
+++ b/main/datefudge/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Simon Frankenberger <simon-alpine@fraho.eu>
 # Maintainer: Simon Frankenberger <simon-alpine@fraho.eu>
 pkgname=datefudge
-pkgver=1.22
+pkgver=1.23
 pkgrel=0
 pkgdesc="Tool to fake the system date"
 url="https://packages.debian.org/sid/datefudge"
@@ -10,20 +10,17 @@ license="GPL-2.0"
 depends="coreutils"
 checkdepends="perl"
 subpackages="$pkgname-doc"
-source="http://deb.debian.org/debian/pool/main/d/datefudge/datefudge_${pkgver}.tar.xz
-musl.patch"
-builddir="$srcdir/$pkgname-$pkgver"
+source="http://deb.debian.org/debian/pool/main/d/datefudge/datefudge_$pkgver.tar.xz
+	musl.patch
+	"
 
 build() {
-	cd "$builddir"
-
 	# fix Makefile, set the version number directly as dpkg-parsechangelog is not available
-	sed -i "s/^VERSION := .\+/VERSION := ${pkgver}/" Makefile
+	sed -i "s/^VERSION := .\+/VERSION := $pkgver/" Makefile
 	make all
 }
 
 check() {
-	cd "$builddir"
 	make test
 }
 
@@ -32,5 +29,5 @@ package() {
 		-C "$builddir" install
 }
 
-sha512sums="ed67d334ca8296ae1c7b5ee1efc6ec7aafaad0aeb9f0f0387245c2eeea94ccc59ab804778b93ab8b34a512b83a3ec81d10f341d4f4f22b4a07fccdadaefb6d8b  datefudge_1.22.tar.xz
+sha512sums="9b5d5f531b3f1a5ece96fbc421726c0b7edad5709ab46cb2deb201f9f6eeed2e33b7590e221e33473edb6dbdaaf46cbef0bd4be4fbd592e8efec18a343503f71  datefudge_1.23.tar.xz
 e8b004957276f1162f9d686f03593cdd64455a35764e34aeac72d419b6ac071fb044405c73999283fcb9abff312225f81039553801cfaa1165bbbfc80705d44b  musl.patch"
