--- a/community/mingw-w64-crt/APKBUILD
+++ b/community/mingw-w64-crt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=mingw-w64-crt
-pkgver=6.0.0
+pkgver=7.0.0
 pkgrel=0
 pkgdesc="MinGW-w64 CRT for Windows"
 options="!check !strip"
@@ -14,7 +14,7 @@ makedepends="
 	mingw-w64-headers
 	mingw-w64-headers-bootstrap
 	"
-source="https://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v${pkgver}.tar.bz2"
+source="https://sourceforge.net/projects/mingw-w64/files/mingw-w64/mingw-w64-release/mingw-w64-v$pkgver.tar.bz2"
 builddir="$srcdir/mingw-w64-v$pkgver/mingw-w64-crt"
 
 case "$CARCH" in
@@ -29,7 +29,7 @@ case "$CARCH" in
 esac
 
 # Directory for out-of-tree builds
-_crtdir="$srcdir/crt-${_target}"
+_crtdir="$srcdir/crt-$_target"
 
 prepare() {
 	default_prepare
@@ -45,7 +45,7 @@ build() {
 		--target=${_target} \
 		--enable-wildcard \
 		${_configure_args} \
-		CC=${_target}-gcc
+		CC=$_target-gcc
 	make
 }
 
@@ -54,4 +54,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="e3d3663e0cb33a16f90b1a33e81b5a30d26f7e34270b14e865c10068f2a2d32da9ef8cbbb0c3fed9c71429ae11c82152ff3b87d81558929b2a4993dc99cfc11e  mingw-w64-v6.0.0.tar.bz2"
+sha512sums="30e5b2824a24eeb99ab519e3fc134cc9a7f04ee8b853bc8d66a13d1ab74144bf78b93e162bfe6de2a5e61f63c0e620a933b260b02d019cd68cc4b78bd36c67fd  mingw-w64-v7.0.0.tar.bz2"
