community/libcsys: upgrade to 2.7.1

--- a/community/libcsys/APKBUILD
+++ b/community/libcsys/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=libcsys
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="Library for managing a hard drive and getting system resource information in real-time."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtbase udisks2"
 makedepends="qt5-qtbase-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/libcsys/-/archive/v$pkgver/libcsys-v$pkgver.tar.gz"
 subpackages="$pkgname-dev"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
@@ -23,4 +23,4 @@ package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
 
-sha512sums="0131201b80cb9b947cb86294829325477516f89748f87969e7a2c87e46368a44effc0e8e09a1c125e80b6a1f38e2be5296d281eb88dc09bd7a95aab2ded33046  libcsys-2.7.0.tar.gz"
+sha512sums="a9ceeaf5ab56142854ae6fa3e45dbc45807e41ad086e503fe684b41e28381ea3d46326785db512ee2a0372aa1761c688e8cc31c16aff7fa68cc458aed20bc138  libcsys-2.7.1.tar.gz"
