community/coreaction: upgrade to 2.7.1

--- a/community/coreaction/APKBUILD
+++ b/community/coreaction/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coreaction
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A side bar for showing widgets from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev libcsys-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coreaction/-/archive/v$pkgver/coreaction-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="7d077a7bd81fd52e373831108757466a9e6c7c9a87f07b538896bc5b696161c0e2428377813a809a2387b1b66705f158846463333e542624eaba02cf81b6c226  coreaction-2.7.0.tar.gz"
+sha512sums="03594b101ffa38b28d98b7055d3cd940ad3551d1955b3f70f709f730f03b5a7e0da71fab4f3c92dc876631df41783b1f0062abcc8e65974990eb897a625d6445  coreaction-2.7.1.tar.gz"
