--- a/community/corearchiver/APKBUILD
+++ b/community/corearchiver/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corearchiver
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="Archiver from the CoreApps family to create and extract archives."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev libarchive-qt-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corearchiver/-/archive/v$pkgver/corearchiver-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="3bbf85f33de118d90e0e915337dc392a4e3aa17198e010a364369e1b8de7d3d649cf93dab9bc37ce59eb665d516013dfa7ac000e496f949fbaf38ee14ebc37fa  corearchiver-2.7.0.tar.gz"
+sha512sums="dbbb3f7280e694212ed9943eb6aaebfee8ec4fa3756686e0f204d5b55d92423e3d8d9d1b79103b248e92dbcfaaa66c4f92e62276493b1fa1e196d348fe5aefbd  corearchiver-2.7.1.tar.gz"
