--- a/community/corefm/APKBUILD
+++ b/community/corefm/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corefm
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A lightweight file-manager from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev libcsys-dev qt5-qtmultimedia-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corefm/-/archive/v$pkgver/corefm-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -19,7 +19,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="51ea538c64edb810fbb90e29b6a4497b72932f52415332b070dd82f5b486e6e51dca9dd367b8b3af6a3ba9ec55c7fcf6e6f3be5e71bc0b86fae325d0fc0e535b  corefm-2.7.0.tar.gz"
+sha512sums="7fc14fdcf6c394c6f0e8a6aec2252417847e1e323eb420d09b1e1244af3947c60d38e84ae16d48d5860c53ab58c760282d18284cc770ddbc483448ee30b9aaf2  corefm-2.7.1.tar.gz"
