--- a/community/coreimage/APKBUILD
+++ b/community/coreimage/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coreimage
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="An image viewer from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coreimage/-/archive/v$pkgver/coreimage-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="38dc003cf27abf9db8b9ee3000755d9ebc6ac191e74e574f3d11a9b0a146c46eaf651c19d3f99318a3bf01cd5d556d55382fcf7c084d125ecc0a6b9f935b462b  coreimage-2.7.0.tar.gz"
+sha512sums="af0184657fd488c2bf1c2c87e4b56a2176d74b2879100520a7700cccb0b1b172677347866e60014897007d2a79ee01046111f84906625f274d468c3c739fc76e  coreimage-2.7.1.tar.gz"
