community/coreinfo: upgrade to 2.7.1

--- a/community/coreinfo/APKBUILD
+++ b/community/coreinfo/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coreinfo
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A file information tool from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev libmediainfo-dev libzen-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coreinfo/-/archive/v$pkgver/coreinfo-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="f4d2d31f246a38758b85ca22b88a2913fa5c10c2843b0b7069e2d44d8cef7b0350744403e9148bbccaf67b499b3a05853b6af5414f0f66ccd9168a8f7760f223  coreinfo-2.7.0.tar.gz"
+sha512sums="2fa747f136efbb3b4d19e4879deafd8d9530e14bcfedd9b011896e7437a3ca7d4c6ce9eb16fb1e766f80caef1edc2bc060ac09fe6d4bcb8a1dff10218ac80e71  coreinfo-2.7.1.tar.gz"
