community/corerenamer: upgrade to 2.7.1

--- a/community/corerenamer/APKBUILD
+++ b/community/corerenamer/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=corerenamer
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="A batch file renamer from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/corerenamer/-/archive/v$pkgver/corerenamer-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -21,4 +21,4 @@ build() {
 package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
-sha512sums="8c7ab21e587dff14167dfe131bf5fdff013163dca855da9acf58004501701d5f04b69713ea450abe063998fa39ea9592d6b646d8818113db2cf1f92c9f7de0f0  corerenamer-2.7.0.tar.gz"
+sha512sums="496a7c95cc2540514fd31f368050542bcc9dba2746427c0d9b54a3192b29495e2b735eca7ed36904b9d61e8dd23a9d871328347fd198ba3dc366267e46de391c  corerenamer-2.7.1.tar.gz"
