community/coreuniverse: upgrade to 2.7.1

--- a/community/coreuniverse/APKBUILD
+++ b/community/coreuniverse/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: rahmanshaber <rahmanshaber@yahoo.com>
 # Maintainer: rahmanshaber <rahmanshaber@yahoo.com>
 pkgname=coreuniverse
-pkgver=2.7.0
+pkgver=2.7.1
 pkgrel=0
 pkgdesc="Shows information about apps from the CoreApps family."
 arch="all"
@@ -9,7 +9,7 @@ url="https://gitlab.com/cubocore"
 license="GPL-3.0-or-later"
 depends="qt5-qtsvg"
 makedepends="qt5-qtbase-dev libcprime-dev"
-source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/$pkgname/-/archive/v$pkgver/$pkgname-v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://gitlab.com/cubocore/coreuniverse/-/archive/v$pkgver/coreuniverse-v$pkgver.tar.gz"
 builddir="$srcdir/$pkgname-v$pkgver"
 options="!check"
 
@@ -22,4 +22,4 @@ package() {
 	INSTALL_ROOT="$pkgdir" make install
 }
 
-sha512sums="9841b5726264c5c6292c400f65d66c28f266e13401b416fb0bbe532ed159ef09ddf702fa7413d0d623f63da8079ea381ee6ee6c2898458897aa8d10f6c8303b1  coreuniverse-2.7.0.tar.gz"
+sha512sums="83c01140955f907195fd68ac4764be189a57485d8373c035aabe03363361b1bfede53f35d220c385f8a1e3573c82e64e97a4fd465e9be5fba56bb328cc04faca  coreuniverse-2.7.1.tar.gz"
