testing/kaccounts-integration: add missing runtime dep

--- a/testing/kaccounts-integration/APKBUILD
+++ b/testing/kaccounts-integration/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kaccounts-integration
 pkgver=19.12.0
-pkgrel=0
+pkgrel=1
 arch="all"
 url="https://kde.org/applications/internet/"
 pkgdesc="Small system to administer web accounts for the sites and services across the KDE desktop"
 license="GPL-2.0-or-later AND LGPL-2.1-or-later"
+depends="accounts-qml-module"
 depends_dev="qt5-qtbase-dev kcmutils-dev ki18n-dev kcoreaddons-dev kdbusaddons-dev kdeclarative-dev libaccounts-qt-dev signond-dev"
 makedepends="$depends_dev extra-cmake-modules"
 source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
