community/signond: move from testing

--- a/community/signond/APKBUILD
+++ b/community/signond/APKBUILD
@@ -9,7 +9,7 @@ pkgdesc="A D-Bus service which performs user authentication on behalf of its cli
 license="LGPL-2.1-only"
 makedepends="qt5-qtbase-dev doxygen graphviz"
 checkdepends="dbus-x11"
-source="https://gitlab.com/accounts-sso/$pkgname/-/archive/VERSION_$pkgver/$pkgname-VERSION_$pkgver.tar.gz
+source="https://gitlab.com/accounts-sso/signond/-/archive/VERSION_$pkgver/signond-VERSION_$pkgver.tar.gz
 	busybox-incompatibility.patch"
 subpackages="$pkgname-doc $pkgname-static $pkgname-dev"
 if [ "$CARCH" = armv7 ]; then
