community/kaccounts-integration: move from testing

--- a/community/kaccounts-integration/APKBUILD
+++ b/community/kaccounts-integration/APKBUILD
@@ -10,12 +10,19 @@ license="GPL-2.0-or-later AND LGPL-2.1-or-later"
 depends="accounts-qml-module"
 depends_dev="qt5-qtbase-dev kcmutils-dev ki18n-dev kcoreaddons-dev kdbusaddons-dev kdeclarative-dev libaccounts-qt-dev signond-dev"
 makedepends="$depends_dev extra-cmake-modules"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kaccounts-integration-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
 options="!check" # No tests available
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -23,6 +30,7 @@ build() {
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
