community/kaccounts-providers: move from testing

--- a/community/kaccounts-providers/APKBUILD
+++ b/community/kaccounts-providers/APKBUILD
@@ -8,12 +8,19 @@ url="https://kde.org/applications/internet/"
 pkgdesc="Small system to administer web accounts for the sites and services across the KDE desktop"
 license="GPL-2.0-or-later"
 depends="kaccounts-integration"
-makedepends="qt5-qtbase-dev qt5-qtdeclarative-dev kio-dev ki18n-dev kdeclarative-dev kpackage-dev kaccounts-integration-dev extra-cmake-modules intltool"
-source="https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtdeclarative-dev kio-dev ki18n-dev kdeclarative-dev kpackage-dev kaccounts-integration-dev intltool"
+source="https://download.kde.org/stable/release-service/$pkgver/src/kaccounts-providers-$pkgver.tar.xz"
 subpackages="$pkgname-lang"
 
+prepare() {
+	default_prepare
+
+	mkdir "$builddir"/build
+}
+
 build() {
-	cmake \
+	cd "$builddir"/build
+	cmake "$builddir" \
 		-DCMAKE_BUILD_TYPE=RelWithDebInfo \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib
@@ -21,6 +28,7 @@ build() {
 }
 
 package() {
+	cd "$builddir"/build
 	DESTDIR="$pkgdir" make install
 }
 
